skill renamed, description improved